# offline_language_coach

./: README.md  app.py  pyproject.toml
data/: progress.db
services/: grammar.py  langid.py  latin.py  llm.py  progress.py  prompts.py  pron_analysis.py  stt.py
