[project]
name = "offline-language-coach"
version = "0.1.0"
description = "Offline speech-to-text language coach with practice modules and progress tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35",
  "streamlit-mic-recorder>=0.0.8",
  "pandas>=2.0",
  "requests>=2.31",
  "langdetect>=1.0.9",
  "language-tool-python>=2.7.1",
  "faster-whisper>=1.0.3",
  "soundfile>=0.12.1"
]

[tool.uv]
dev-dependencies = []
